welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:11: error: value downto is not a member of Int
  for(i<-getMondeLargeur()-1 downto 1)
                             ^